Fix for floating labels in textareas (dark mode)

--- a/scss/forms/_floating-labels.scss
+++ b/scss/forms/_floating-labels.scss
@@ -81,7 +81,7 @@
     }
   }
   > textarea:disabled ~ label::after {
-    background-color: $input-disabled-bg;
+    background-color: transparent;
   }
 
   > .form-control-plaintext {
